--- a/style.css
+++ b/style.css
@@ -383,6 +383,13 @@ li {
     font-size: 36px;
 }
 
+/* Reduce gap between nav and red bar on desktop only */
+@media (min-width: 992px) {
+    .navbar.navbar-expand-lg .navbar-nav .nav-link {
+        margin-bottom: -22%;
+    }
+}
+
 .navbar.navbar-expand-lg .navbar-nav .nav-link:hover,
 .navbar.navbar-expand-lg .navbar-nav .active .nav-link {
     color: #a73437;
